fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/Influence_Parent__c.object-meta.xml
<CustomObject>
    <label>Influence Snapshot</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Influence Parent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influence Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>