fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you&apos;re ready to distribute the results of this snapshot to your users on the My Influence tab.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>