fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Average_Comments_Received__c.field-meta.xml
<CustomField>
    <fullName>Average_Comments_Received__c</fullName>
    <formula>if(  Total_Records__c &gt; 0, Comments_Received_Sum__c /  Total_Records__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Comments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>