fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Average_Influence__c.field-meta.xml
<CustomField>
    <fullName>Average_Influence__c</fullName>
    <formula>if(  Total_Records__c &gt; 0, Influence_Sum__c /  Total_Records__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Influence</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>