fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Avg_Interactions_Post__c.field-meta.xml
<CustomField>
    <fullName>Avg_Interactions_Post__c</fullName>
    <formula>if(  Posts_Created_Sum__c &gt; 0, ( Comments_Received_Sum__c +  Likes_Received_Sum__c ) /  Posts_Created_Sum__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. Interactions/Post</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>