fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <defaultValue>now()</defaultValue>
    <inlineHelpText>Ending boundary of Chatter data to be used in this calculation.</inlineHelpText>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>