fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Followers_Sum__c.field-meta.xml
<CustomField>
    <fullName>Followers_Sum__c</fullName>
    <label>Followers Sum</label>
    <summarizedField>Influence__c.Followers__c</summarizedField>
    <summaryForeignKey>Influence__c.Influence_Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>