fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Include_Custom_Object_Feeds__c.field-meta.xml
<CustomField>
    <fullName>Include_Custom_Object_Feeds__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, Influence calculations include Chatter posts, comments, and following relationships on custom objects.</inlineHelpText>
    <label>Include Custom Object Feeds</label>
    <type>Checkbox</type>
</CustomField>