fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Influence_Sum__c.field-meta.xml
<CustomField>
    <fullName>Influence_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Influence Sum</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>