fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Jobs_Executed__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Executed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Jobs Executed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>