fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Likes_Received_Sum__c.field-meta.xml
<CustomField>
    <fullName>Likes_Received_Sum__c</fullName>
    <label>Likes Received Sum</label>
    <summarizedField>Influence__c.Likes_Received__c</summarizedField>
    <summaryForeignKey>Influence__c.Influence_Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>