fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Maximum_Concurrent_Batches__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Concurrent_Batches__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>The maximum number of simultaneous Apex Batch jobs to launch during this calculation. If you&apos;re not sure what this is, leave it at 5.</inlineHelpText>
    <label>Maximum Concurrent Batches</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>