fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Median_Comments_Received__c.field-meta.xml
<CustomField>
    <fullName>Median_Comments_Received__c</fullName>
    <label>Median Comments Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>