fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Median_Followers__c.field-meta.xml
<CustomField>
    <fullName>Median_Followers__c</fullName>
    <label>Median Followers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>