fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Median_Influence__c.field-meta.xml
<CustomField>
    <fullName>Median_Influence__c</fullName>
    <label>Median Influence</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>