fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Median_Interactions_Post__c.field-meta.xml
<CustomField>
    <fullName>Median_Interactions_Post__c</fullName>
    <label>Median Interactions/Post</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>