fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Median_Posts_Received__c.field-meta.xml
<CustomField>
    <fullName>Median_Posts_Received__c</fullName>
    <label>Median Posts Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>