fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Posts_Received_Sum__c.field-meta.xml
<CustomField>
    <fullName>Posts_Received_Sum__c</fullName>
    <label>Posts Received Sum</label>
    <summarizedField>Influence__c.Posts_Received__c</summarizedField>
    <summaryForeignKey>Influence__c.Influence_Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>