fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Records_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Records_to_Exclude__c</fullName>
    <inlineHelpText>A comma-separated list of IDs to exclude from this calculation. User IDs, record IDs, Group IDs all work - any chatter-enabled object ID.</inlineHelpText>
    <label>Records to Exclude</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>