fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>Loading Chatter Data</fullName>
            </value>
            <value>
                <fullName>Sorting Data</fullName>
            </value>
            <value>
                <fullName>Finalizing Influence</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>