fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Jobs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>