fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <label>Total Influence Records</label>
    <summaryForeignKey>Influence__c.Influence_Parent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>