fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>if( AND( NOT( ISNULL( Start_Time__c ) ), NOT( ISNULL( End_Time__c ) ) ), End_Time__c &lt;= Start_Time__c, false )</errorConditionFormula>
    <errorMessage>End datetime must be greater than the start datetime for this snapshot.</errorMessage>
</ValidationRule>