fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/validationRules/Valid_Concurrent_Batches.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Concurrent_Batches</fullName>
    <active>true</active>
    <errorConditionFormula>or(  Maximum_Concurrent_Batches__c &lt; 1, Maximum_Concurrent_Batches__c &gt; 5 )</errorConditionFormula>
    <errorDisplayField>Maximum_Concurrent_Batches__c</errorDisplayField>
    <errorMessage>Maximum concurrent batches must be a number between 1 and 5.</errorMessage>
</ValidationRule>