fullSandbox11072023/force-app/main/default/objects/Influence_Parent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Median_Influence__c</columns>
    <columns>Comments_Created_Sum__c</columns>
    <columns>Comments_Received_Sum__c</columns>
    <columns>Posts_Created_Sum__c</columns>
    <columns>Posts_Received_Sum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>